cp3-networkpolicy/egress/license-service-reporter-manually/ibm-license-service-reporter-oidc-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ibm-license-service-reporter-oidc-egress
  namespace: ibm-licensing-namespace
spec:
  podSelector:
    matchLabels:
      app: ibm-license-service-reporter-instance
  egress:
    - to:
        - ipBlock:
            cidr: ${OIDC-CIRD} # CIDR of OIDC
  policyTypes:
    - Egress
